--- a/proof_of_concept/mylifesad.css
+++ b/proof_of_concept/mylifesad.css
@@ -1,22 +1,24 @@
 button[title="View fullscreen"] {
-    visibility: hidden; /* disable view full screen on image */
+    visibility: hidden;
+    /* disable view full screen on image */
 }
 
 .stApp a:first-child {
-    display: none; /* disable title link on markdown */
+    display: none;
+    /* disable title link on markdown */
 }
+
 details {
-    display: none; /* disable save button on graph */
+    display: none;
+    /* disable save button on graph */
 }
 
 /* set shit to center */
-div[data-testid="column"]
-{
+div[data-testid="column"] {
     text-align: center;
 }
 
-div[data-testid="column"]:nth-of-type(2)
-{
+div[data-testid="column"]:nth-of-type(2) {
     border: 2px solid red;
 }
 
@@ -28,4 +30,3 @@ div[data-testid=stImage] {
     margin-right: auto;
     width: 100%;
 }
-
