--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -24,7 +24,7 @@ div[data-testid="column"] {
 
 /* first column */
 div[data-testid="column"]:nth-child(1) {
-    background: rgb(215, 255, 225);
+    /* background: rgb(255, 217, 174); */
     height: 80vh; /* 80% of the screen */
     border-radius: 16px;
     border: 1px solid #ccc;
@@ -32,7 +32,7 @@ div[data-testid="column"]:nth-child(1) {
 
 /* second column */
 div[data-testid="column"]:nth-child(2) {
-    background: rgb(215, 255, 225);
+    /* background: rgb(255, 217, 174); */
     height: 80vh; /* 80% of the screen */
     border-radius: 16px;
     border: 1px solid #ccc;
