--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -1,52 +1,19 @@
-button[title="View fullscreen"] {
-    visibility: hidden;
-    /* disable view full screen on image */
-}
-
-.stApp a:first-child {
-    display: none;
-    /* disable title link on markdown */
-}
-
-details {
-    display: none;
-    /* disable save button on graph */
-}
-
-div {
-    text-align: center;
-}
-
 /* set shit to center */
 div[data-testid="column"] {
     text-align: center;
-}
-
-/* first column */
-div[data-testid="column"]:nth-child(1) {
-    /* background: rgb(255, 217, 174); */
-    height: 80vh; /* 80% of the screen */
+    height: 90vh;
     border-radius: 16px;
     border: 1px solid #ccc;
 }
 
-/* second column */
-div[data-testid="column"]:nth-child(2) {
-    /* background: rgb(255, 217, 174); */
-    height: 80vh; /* 80% of the screen */
-    border-radius: 16px;
-    border: 1px solid #ccc;
-}
-
-/* image goes centerrrr */
-div[data-testid=stImage] {
-    text-align: center;
+div[data-testid=stImage] > img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-}
-
-section.main > div:has(~ footer ) {
-    padding-bottom: 0px; /* remove empty space at bottom */
-}
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-height: 100%;
+    min-width: 100%;
+    max-width: 80vh;
+    transform: translate(-50%, -50%);
+    margin-top: 200px;
+  }
